unit tests not compiled/run if boost unit test run-time library not found

--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,9 @@
 /* Define to 1 if you have the `gslcblas' library (-lgslcblas). */
 #undef HAVE_LIBGSLCBLAS
 
+/* Define to 1 if you have the `jemalloc' library (-ljemalloc). */
+#undef HAVE_LIBJEMALLOC
+
 /* Define to 1 if you have the `sequence' library (-lsequence). */
 #undef HAVE_LIBSEQUENCE
 
