--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ install:
   # clang 3.5
   #- if [ "$CXX" == "clang++" ]; then sudo apt-get install -qq clang-3.5; fi
   #- if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.5"; fi
+
+script:
+ ./configure && make && make check
