--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get -f install zlib1g zlib1g-dev libboost-test-1.55.0 libboost-test-1.55-dev libboost-system1.55.0 libboost-system1.55-dev libgsl0-dev libgsl0ldbl
+  - sudo apt-get -f install zlib1g zlib1g-dev libboost-test-dev libboost-system-dev libgsl0-dev libgsl0ldbl
   # g++4.8.1
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
 
