--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
 #  - if [ "CXX" == "clang++"]; then echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main" | sudo tee -a /etc/apt/sources.list ; echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main" | sudo tee -a /etc/apt/sources.list ; echo "deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main" | sudo tee -a /etc/apt/sources.list ; fi
   - sudo apt-get update -qq
-  - sudo apt-get -f install zlib1g zlib1g-dev libboost-system-dev libboost-test-dev
+  - sudo apt-get -f install zlib1g zlib1g-dev libboost-system-dev libboost-test-dev libgsl0-dev libgsl0ldbl
 
 install:
   # g++4.8.1
