--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,31 @@
 language: cpp
 
+sudo: false
+
+language: cpp
+
 compiler:
-# - clang
- - gcc
-
-env:
-  global:
-    - LIBSTDC_VERSION=4.9
-    - CLANG_VERSION=3.5
-
-notifications:
-  email: false
-
-before_install:
-  # g++4.8.1
-  - if [ "$CXX" == "g++" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
-#  - if [ "CXX" == "clang++"]; then echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main" | sudo tee -a /etc/apt/sources.list ; echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main" | sudo tee -a /etc/apt/sources.list ; echo "deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main" | sudo tee -a /etc/apt/sources.list ; fi
-  - sudo apt-get update -qq
-  - sudo apt-get -f install zlib1g zlib1g-dev libboost-dev libboost-system-dev libboost-test-dev libgsl0-dev libgsl0ldbl
+  - gcc
+  - clang
 
 install:
-  # g++4.8.1
-  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.9; fi
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9"; fi
+ - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 
-  # clang 3.5
-  - if [ "$CXX" == "clang++" ]; then sudo apt-get --allow-unauthenticated -qq install build-essential libstdc++-${LIBSTDC_VERSION}-dev clang-${CLANG_VERSION}; fi
-#  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.5"; fi
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+    - clang
+    - zlib1g
+    - zlib1g-dev
+    - libboost-dev
+    - libboost-system-dev
+    - libboost-test-dev
+    - libgsl0-dev
+    - libgsl0ldbl
 
 before_script:
  ./install_libseq.sh
