--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ language: cpp
 
 compiler:
   - gcc
-  - clang
+  - clang-3.5
 
 install:
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+ - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
 
 addons:
   apt:
