--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ language: cpp
 
 compiler:
   - gcc
-  - clang-3.5
+  - clang
 
 install:
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
-# - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
+ - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
 
 addons:
   apt:
@@ -22,7 +22,7 @@ addons:
     packages:
     - gcc-4.9
     - g++-4.9
-    - clang
+    - clang-3.5
     - zlib1g
     - zlib1g-dev
     - libboost-dev
