--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler:
 
 install:
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
- - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
+# - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
 
 addons:
   apt:
@@ -22,7 +22,7 @@ addons:
     packages:
     - gcc-4.9
     - g++-4.9
-    - clang-3.6
+    - clang-3.5
     - zlib1g
     - zlib1g-dev
     - libboost-dev
