--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,12 @@ compiler:
 
 install:
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
-# - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
+ - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.5" CC="clang-3.5"; fi
 
 addons:
   apt:
     sources:
+    - llvm-toolchain-precise-3.5
     - ubuntu-toolchain-r-test
     packages:
     - gcc-4.9
