try to address clang failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ before_script:
 
 script:
  - ./configure --prefix=$HOME CXXFLAGS="-O2 -I$HOME/include" LDFLAGS="$LDFLAGS -L$HOME/lib" && make && make check && make install
- - ./unit/mutateTest
+ - LD_LIBRARY_PATH=$HOME/lib ./unit/mutateTest
  - $HOME/bin/fwdppConfig --version
