--- a/fwdpp/extensions/Makefile.in
+++ b/fwdpp/extensions/Makefile.in
@@ -249,7 +249,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkginclude_HEADERS = callbacks.hpp
+pkginclude_HEADERS = callbacks.hpp regions.hpp
 all: all-am
 
 .SUFFIXES:
