add sampling fxns to sugar layer

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -2,4 +2,4 @@ pkgincludedir=$(prefix)/include/fwdpp/sugar
 
 SUBDIRS=singlepop metapop multiloc gsl poptypes
 
-pkginclude_HEADERS=sugar.hpp serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp
+pkginclude_HEADERS=sugar.hpp serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp
