--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -1,5 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/sugar
 
-SUBDIRS=singlepop metapop multiloc gsl poptypes
+SUBDIRS=singlepop metapop multiloc gsl poptypes sampling
 
 pkginclude_HEADERS=sugar.hpp serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp
