--- a/experimental_examples/Makefile.am
+++ b/experimental_examples/Makefile.am
@@ -1,3 +1,6 @@
+if HAVE_SIMDATA_HPP
+if HAVE_LIBSEQ_RUNTIME
+
 check_PROGRAMS=sex_limited_ind diploid_fixed_sh_ind
 
 sex_limited_ind_SOURCES=sex_limited_ind.cc 
@@ -11,3 +14,5 @@ AM_CPPFLAGS+=-DNDEBUG
 endif
 LDADD=
 
+endif
+endif
